--- a/Spotify_Project.ipynb
+++ b/Spotify_Project.ipynb
@@ -1058,7 +1058,7 @@
     "print(f'{Num_Artists} different artists and {Num_songs} different songs')\n",
     "print('')\n",
     "print(f'My number one artist was {Top_Artist}, as I listened to their songs a total of {Top_Artist_Hours} times.')\n",
-    "print(f'My favorite song was {Top_Song}, as I listened to it a grind total of {Top_Song_Plays} times!')\n",
+    "print(f'My favorite song was {Top_Song}, as I listened to it a grand total of {Top_Song_Plays} times!')\n",
     "print('')\n",
     "print('Here\\'s a graph of my top 10 artists:')\n",
     "print(ArtistGraph())\n",
